fix(user): fixed an issue where the edit profile photo is not centered in mobile view

--- a/src/styles/AdminPage.module.css
+++ b/src/styles/AdminPage.module.css
@@ -20,11 +20,11 @@
     flex-direction: column;
   }
 
-  .formImageArea {
+  /* .formImageArea {
     margin-top: 35px;
-  }
+  } */
 
-  .imgArea {
+  /* .imgArea {
     margin-left: 65px !important;
-  }
+  } */
 }
